# CreamLibrary

./: .gitignore  .gitmodules  Cream-meta.pd  Makefile.am  README.md  c.library-meta.pd.in  c.library.cbp  c.library.cpp  c.library.depend  c.library.h  c.library.hpp  c.library.layout  c.library.sln  c.library.vcxproj  c.library.vcxproj.filters  configure.ac  cream-meta.pd.in
Caramel/: Makefile.am  c.convolve2_tilde.cpp  c.convolve_tilde.cpp  c.count_tilde.cpp  c.fft_tilde.cpp  c.fir_tilde.cpp  c.freeverb_tilde.cpp  c.fuzz_tilde.cpp  c.matrix_tilde.cpp  c.overdrive_tilde.cpp
Chocolate/: Makefile.am  c.bang.cpp  c.blackboard.cpp  c.breakpoints.cpp  c.colorpanel.cpp  c.dsp.cpp  c.dsp_tilde.cpp  c.gain_tilde.cpp  c.incdec.cpp  c.knob.cpp  c.matrix.cpp  c.menu.cpp  c.meter_tilde.cpp  c.number.cpp  c.number_tilde.cpp  c.plane.cpp  c.preset.cpp  c.radio.cpp  c.rslider.cpp  c.scope_tilde.cpp  c.slider.cpp  c.spectroscope_tilde.cpp  c.tab.cpp  c.toggle.cpp
Cinnamon/: Makefile.am  c.atan_tilde.cpp  c.sin_tilde.cpp
Coffee/: Makefile.am  c.informer.cpp  c.io.cpp  c.loadmess.cpp  c.mousestate.cpp  c.pak.cpp  c.patcherargs.cpp  c.patcherinfos.cpp  c.patchermess.cpp  c.prepend.cpp
Cream.xcodeproj/: project.pbxproj
CreamTemp.xcodeproj/: project.pbxproj
CreamTemp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Deprecated/: AudioFFT.cpp  AudioFFT.h  Makefile.am  c.convolve_tilde.cpp  c.freeverb_tilde.cpp  c.loadmess.cpp  c.pak.cpp  c.patcherargs.cpp  c.patcherinfos.cpp  c.patchermess.cpp  c.prepend.cpp
Dev/: Voronoy.cpp
Dev/epd_ugen/: epd_ugen.c  epd_ugen.h
Package/Cream/: Makefile.am  README.txt  changelog.txt  cream-help.pd
Package/Cream/helps/: Makefile.am  c.bang-help.pd  c.blackboard-help.pd  c.breakpoints-help.pd  c.colorpanel-help.pd  c.convolve~-help.pd  c.dsp~-help.pd  c.fir~-help.pd  c.freeverb~-help.pd  c.gain~-help.pd  c.incdec-help.pd  c.knob-help.pd  c.matrix-help.pd  c.menu-help.pd  c.meter~-help.pd  c.mousestate-help.pd  c.number-help.pd  c.number~-help.pd  c.pak-help.pd  c.patcherargs-help.pd  c.patcherinfos-help.pd  c.plane-help.pd  c.preset-help.pd  c.radio-help.pd  c.rslider-help.pd  c.scope~-help.pd  c.slider-help.pd  c.spectroscope~-help.pd  c.tab-help.pd  c.toggle-help.pd
Package/Cream/misc/: Makefile.am  c.Caramel.txt  c.Chocolate.txt  c.Coffee.txt  c.help.gui.pd  c.help.header.pd  c.help.pub.pd  c.loadmess.pd  c.mousesate.pd  c.objects.txt  c.parts.txt  c.prepend.pd  choco.preset
Package/CreamLibrary/: README.txt  c.library-help.pd  c.library.pd_darwin  c.library.pd_linux
Package/CreamLibrary/Linux32/pd-extented/: c.library.pd_linux
Package/CreamLibrary/helps/: Makefile.am  c.blackboard-help.pd  c.colorpanel-help.pd  c.knob-help.pd  c.loadmess-help.pd  c.matrix-help.pd  c.pak-help.pd  c.plane-help.pd  c.prepend-help.pd  c.preset-help.pd  c.radio-help.pd  c.slider-help.pd
Package/CreamLibrary/misc/: Makefile.am  c.Chocolate.txt  c.coffee.txt  c.help.header.pd  c.parts.txt
Package/CreamLibrary/pd-extented/: c.library.pd_darwin  c.library.pd_linux
Package/cream/: Makefile.am  cream-help.pd
Package/cream/helps/: Makefile.am  c.breakpoints-help.pd  c.colorpanel-help.pd  c.convolve~-help.pd  c.gain~-help.pd  c.incdec-help.pd  c.knob-help.pd  c.loadmess-help.pd  c.matrix~-help.pd  c.menu-help.pd  c.meter~-help.pd  c.number-help.pd  c.number~-help.pd  c.patcherinfos-help.pd  c.plane-help.pd  c.preset-help.pd  c.radio-help.pd  c.rslider-help.pd  c.scope~-help.pd  c.slider-help.pd  c.tab-help.pd  c.toggle-help.pd
Package/cream/misc/: Makefile.am  c.Chocolate.txt  c.help.header.pd  c.help.pub.pd  c.input.help.pd
Plugin/: Camomile.jucer  Flags
Plugin/Builds/MacOSX/: epd_ugen.c  epd_ugen.h
Plugin/Builds/MacOSX/Camomile.xcodeproj/: project.pbxproj
Plugin/Builds/MacOSX/Camomile.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Plugin/Builds/VisualStudio2013/: Camomile.sln  Camomile.vcxproj  Camomile.vcxproj.filters
Plugin/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Plugin/JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
Plugin/JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.h
Plugin/JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
Plugin/JuceLibraryCode/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h
Plugin/JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
Plugin/JuceLibraryCode/modules/juce_audio_utils/: juce_audio_utils.h
Plugin/JuceLibraryCode/modules/juce_core/: juce_core.h
Plugin/JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
Plugin/JuceLibraryCode/modules/juce_events/: juce_events.h
Plugin/JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
Plugin/JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
Plugin/JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  epd_ugen.c  epd_ugen.h
Sources/: Makefile.am  c.bang.cpp  c.blackboard.cpp  c.breakpoints.cpp  c.camomile.cpp  c.colorpanel.cpp  c.comment.cpp  c.dsp_tilde.cpp  c.gain_tilde.cpp  c.incdec.cpp  c.keyboard.cpp  c.knob.cpp  c.matrix.cpp  c.matrix_tilde.cpp  c.menu.cpp  c.meter_tilde.cpp  c.number.cpp  c.number_tilde.cpp  c.plane.cpp  c.preset.cpp  c.radio.cpp  c.rslider.cpp  c.scope_tilde.cpp  c.slider.cpp  c.tab.cpp  c.toggle.cpp  c.wavesel.cpp
Standalone/: Cherry.jucer
Standalone/Builds/MacOSX/Camomile.xcodeproj/: project.pbxproj
Standalone/Builds/MacOSX/Cherry.xcodeproj/: project.pbxproj
Standalone/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
Standalone/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h
Standalone/Source/: Main.cpp  MainComponent.cpp
c.library.xcodeproj/: project.pbxproj
c.library.xcodeproj/project.xcworkspace/xcshareddata/: c.library.xccheckout
cream.xcodeproj/: project.pbxproj
cream.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
m4/: ax_fat_binary.m4
(+3 files in other folders)
