AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libChocolate.la

libChocolate_la_CXXFLAGS = @PD_CPPFLAGS@ -s -O2 -fPIC -fpermissive 
#~libChocolate_la_LDFLAGS = -module -avoid-version -shared -shrext .@EXTENSION@  @PD_LDFLAGS@ -fPIC
libChocolate_la_LIBADD = 

libChocolate_la_SOURCES = c.bang.cpp \
c.blackboard.cpp \
c.breakpoints.cpp \
c.colorpanel.cpp \
c.dsp.cpp \
c.gain_tilde.cpp \
c.incdec.cpp \
c.knob.cpp \
c.matrix.cpp \
c.menu.cpp \
c.meter_tilde.cpp \
c.number.cpp \
c.number_tilde.cpp \
c.plane.cpp \
c.preset.cpp \
c.radio.cpp \
c.rslider.cpp \
c.scope_tilde.cpp \
c.spectroscope_tilde.cpp \
c.slider.cpp \
c.tab.cpp \
c.toggle.cpp


