AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libCinnamon.la

libCinnamon_la_CXXFLAGS = @PD_CPPFLAGS@ -O3 -fPIC
#~libCinnamon_la_LDFLAGS = -module -avoid-version -shared -shrext .@EXTENSION@  @PD_LDFLAGS@ -fPIC
libCinnamon_la_LIBADD = 

libCinnamon_la_SOURCES = c.atan_tilde.cpp \
c.sin_tilde.cpp



