AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

c.libraryhelpdir=$(pkglibdir)/helps

dist_c.libraryhelp_DATA = \
c.bang-help.pd \
c.blackboard-help.pd \
c.breakpoints-help.pd \
c.colorpanel-help.pd \
c.dsp~-help.pd \
c.gain~-help.pd \
c.incdec-help.pd \
c.knob-help.pd \
c.matrix-help.pd \
c.menu-help.pd \
c.meter~-help.pd \
c.number~-help.pd \
c.number-help.pd \
c.plane-help.pd \
c.preset-help.pd \
c.radio-help.pd \
c.rslider-help.pd \
c.scope~-help.pd \
c.slider-help.pd \
c.tab-help.pd \
c.toggle-help.pd \
c.pak-help.pd \
c.patcherargs-help.pd \
c.patcherinfos-help.pd \
c.convolve~-help.pd \
c.freeverb~-help.pd