AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

c.librarymiscdir=$(pkglibdir)/misc

dist_c.librarymisc_DATA = \
 Caramel-help.pd \
 c.Caramel.txt \
 c.Chocolate.txt \
 c.Coffee.txt \
 c.help.header.pd \
 c.help.pub.pd \
 chocolate2.gif \
 chocolate.gif \
 Chocolate-help.pd \
 choco.preset \
 clogo.gif \
 Coffee-help.pd \
 c.parts.txt \
 image1.gif \
 image2.gif
